syntax = "proto3";

message StartMsg {
     string code=1;
     string msg=2;
}